Grafana/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: grafana-service
    namespace: monitoring
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3000'
spec:
    selector:
        app: grafana
    type: ClusterIP
    ports:
        - port: 3000
          targetPort: 3000
          name: grafana
